--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -34,7 +34,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./environment_setup/
-          tags: ghcr.io/lukas-lundmark/${{ env.IMAGE_NAME }}:latest
+          tags: |
+            ghcr.io/lukas-lundmark/${{ env.IMAGE_NAME }}:latest
+            ghcr.io/lukas-lundmark/${{ env.IMAGE_NAME }}:${{ github.sha }}
 
           push: ${{ github.ref == 'refs/heads/main' }}
 
