--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Set AZ Configs
         run: |
-          az configure -–defaults group='${{ env.RESOURCE_GROUP }}'
+          az configure --defaults group='${{ env.RESOURCE_GROUP }}'
           az configure --defaults workspace='${{ env.WORKSPACE }}'
 
       - name: Produce AML Config
