Added new action

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -57,28 +57,9 @@ jobs:
         password: ${{ secrets.CR_PAT }}
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Authenticate with Azure
-        uses: azure/login@v1
+      - name: AML Login
+        uses: .github/actions/aml_login
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Set AZ Configs
-        run: |
-          az configure --defaults group='${{ env.RESOURCE_GROUP }}'
-          az configure --defaults workspace='${{ env.WORKSPACE }}'
-
-      - name: Produce AML Config
-        run: |
-          # We assume this SP only has one subscription
-          SUBSCRIPTION=$(az account list --query [0].id)
-          # Create a config object from our parameters using jq
-          JSON_STRING=$(jq -n \
-              --arg sub $SUBSCRIPTION \
-              --arg rg ${{ env.RESOURCE_GROUP }} \
-              --arg ws ${{ env.WORKSPACE }} \
-              '{subscription_id: $sub, resource_group: $rg, workspace_name: $ws}')
-          # Write the json string to the current repo
-          echo -e $JSON_STRING >> $PWD/config.json
+          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+          RESOURCE_GRUOP: ${{ env.RESOURCE_GROUP }}
+          WORKSPACE: ${{ env.WORKSPACE }}
