--- a/.github/actions/aml_login/action.yml
+++ b/.github/actions/aml_login/action.yml
@@ -21,11 +21,13 @@ runs:
         creds: ${{ inputs.AZURE_CREDENTIALS }}
 
     - name: Set AZ Configs
+      shell: bash
       run: |
         az configure --defaults group='${{ inputs.RESOURCE_GROUP }}'
         az configure --defaults workspace='${{ inputs.WORKSPACE }}'
 
     - name: Produce AML Config
+      shell: bash
       run: |
         # We assume this SP only has one subscription
         SUBSCRIPTION=$(az account list --query [0].id)
