Added Training Pipeline

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -8,6 +8,11 @@ env:
   RESOURCE_GROUP: mlops-rg
   WORKSPACE: azure-ml-toyota-demo
 
+  EXPERIMENT_NAME: ci-train-pipeline-experiment
+  TRAIN_PIPELINE_NAME: ci-train-pipeline
+  ENVIRONMENT_NAME: my-conda-env
+  CPUCLUSTER: cpucluster
+
 jobs:
   build-and-push-docker-image:
     name: Build Docker image and push to repositories
@@ -45,7 +50,7 @@ jobs:
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
 
-  connect-to-azure:
+  build-train-pipeline:
     needs: build-and-push-docker-image
     name: Connect to Azure
     runs-on: ubuntu-latest
@@ -67,3 +72,32 @@ jobs:
           AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
           RESOURCE_GROUP: ${{ env.RESOURCE_GROUP }}
           WORKSPACE: ${{ env.WORKSPACE }}
+
+      - name: Build pipeline
+        run: python -m ml_pipelines.build_train_pipeline
+
+  run-train-pipeline:
+    needs: build-and-push-docker-image
+    name: Connect to Azure
+    runs-on: ubuntu-latest
+
+    container:
+      image: ghcr.io/lukas-lundmark/mlops-ci-image:latest
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.CR_PAT }}
+
+    steps:
+
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: AML Login
+        uses: ./.github/actions/aml_login
+        with:
+          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+          RESOURCE_GROUP: ${{ env.RESOURCE_GROUP }}
+          WORKSPACE: ${{ env.WORKSPACE }}
+
+      - name: Build pipeline
+        run: python -m ml_pipelines.run_train_pipeline
